z-index fix

--- a/_assets/stylesheets/_modules/_common.scss
+++ b/_assets/stylesheets/_modules/_common.scss
@@ -8,3 +8,4 @@ $z-modal: 100000;
 $z-flyout-menu: 60000;
 $z-overlay: 50000;
 $z-popup-menu: 40000;
+$z-top-bar: 200;
