--- a/_assets/stylesheets/_partials/_header/_navbar.scss
+++ b/_assets/stylesheets/_partials/_header/_navbar.scss
@@ -142,7 +142,7 @@ $navigationWidth: 27.5em;
 			&.open {
 				left: 0;
 				opacity: 1;
-				
+				z-index: $z-popup-menu;
 			}
 		}
 	}
