--- a/_assets/stylesheets/_partials/_header/_top_bar.scss
+++ b/_assets/stylesheets/_partials/_header/_top_bar.scss
@@ -16,6 +16,7 @@
 	text-align: center;
 	position: relative;
 	border-bottom: 1px solid #979797;
+	z-index: $z-top-bar;
 }
 
 .site-logo {
